# greentic-mcp

./: .gitignore  Cargo.toml  MIGRATION_STATUS.md  README.md  request.json
.codex/: StatePR-06.md  global_rules.md  repo_overview.md
.github/workflows/: publish-mcp-adapter.yml  publish.yml  release-binaries.yml  rust-ci.yml
ci/: local_check.sh
crates/mcp-adapter/: Cargo.toml  README.md
crates/mcp-adapter/src/: lib.rs
crates/mcp-adapter/wit/: package.wit
crates/mcp-exec/: Cargo.toml  README.md
crates/mcp-exec/src/: config.rs  describe.rs  lib.rs  path_safety.rs  router.rs  runner.rs  store.rs
crates/mcp-exec/tests/: offline_mock.rs  online_weather.rs  router_and_legacy.rs  router_fixture.rs
crates/mcp-exec/tests/legacy_exec/: Cargo.toml
crates/mcp-exec/tests/legacy_exec/src/: lib.rs
crates/mcp-exec/tests/router_echo/: Cargo.toml  README.md
crates/mcp-exec/tests/router_echo/src/: lib.rs
docs/: mcp-components.md
greentic-mcp/: ABI.md  Cargo.toml  README.md
greentic-mcp/assets/: mcp_adapter_25_06_18.component.wasm
greentic-mcp/src/: auth.rs  compose.rs  executor.rs  lib.rs  protocol.rs  types.rs
greentic-mcp/tests/: compose.rs  integration_echo.rs
greentic-mcp/tests/fixtures/echo_tool/: Cargo.toml
greentic-mcp/tests/fixtures/echo_tool/src/: lib.rs
scripts/: build_adapter.sh
