[workspace]
members = [
    "crates/mcp-exec",
    "crates/mcp-adapter",
    "greentic-mcp",
    "greentic-mcp/tests/fixtures/echo_tool",
    "crates/mcp-exec/tests/router_echo",
    "crates/mcp-exec/tests/legacy_exec",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/agentic/greentic-mcp"
version = "0.4.13"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
wasmtime = { version = "40", default-features = false, features = ["async", "component-model", "cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "40", default-features = false, features = ["p2"] }
tempfile = "3"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "gzip", "brotli", "deflate", "rustls"] }
greentic-types = "0.4"
greentic-interfaces = { version = "0.4", default-features = false, features = ["describe-v1", "runner-host-v1"] }
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["guest"] }
indexmap = "2"
rand = { version = "0.9", features = ["std"] }
serde_yaml_bw = "2"
greentic-mcp-exec = { version = "0.4", path = "crates/mcp-exec" }
wit-bindgen = { version = "0.50", features = ["macros"] }
