[package]
name = "greentic-mcp-exec"
version.workspace = true
edition = "2024"
license = "MIT"
description = "Greentic executor for running wasix:mcp-compatible WebAssembly components with policy-driven verification and sandboxing."
repository = "https://github.com/agentic/greentic-mcp"
documentation = "https://docs.rs/greentic-mcp-exec"
readme = "README.md"
keywords = ["greentic", "wasm", "executor", "mcp"]
categories = ["wasm"]
include = ["src/**", "tests/**", "README.md", "Cargo.toml", "wit/**"]

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true
greentic-types.workspace = true
greentic-interfaces.workspace = true
reqwest.workspace = true
base64 = "0.22"
clap.workspace = true
cap-std.workspace = true
tempfile.workspace = true

[features]
default = ["describe-v1", "runner-host-v1"]
describe-v1 = ["greentic-interfaces/describe-v1"]
runner-host-v1 = ["greentic-interfaces/runner-host-v1"]

[dev-dependencies]
tempfile.workspace = true
wat = "1"
